Fix: make height 100dvh on mobile menu

--- a/src/css/components/_site-navigation.css
+++ b/src/css/components/_site-navigation.css
@@ -1,6 +1,6 @@
 .site-navigation {
     backdrop-filter: blur(5px);
-    height: 100%;
+    height: 100dvh;
     left: 0;
     opacity: 0;
     padding-bottom: var(--global--layout--edge);
